lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_is_equal/buffer_is_equal2/buffer_is_equal2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_is_equal/buffer_is_equal2/buffer_is_equal2.c:15:21: warning: implicit declaration of function 'chunk_buffer_acquire' is invalid in C99 [-Wimplicit-function-declaration]
    buffer * s__a = chunk_buffer_acquire();
                    ^
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_is_equal/buffer_is_equal2/buffer_is_equal2.c:15:14: warning: incompatible integer to pointer conversion initializing 'buffer *' with an expression of type 'int' [-Wint-conversion]
    buffer * s__a = chunk_buffer_acquire();
             ^      ~~~~~~~~~~~~~~~~~~~~~~
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_is_equal/buffer_is_equal2/buffer_is_equal2.c:20:5: error: use of undeclared identifier 'http_method_t'
    http_method_t e_2_i = e_2_i_enum_index % 41;
    ^
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_is_equal/buffer_is_equal2/buffer_is_equal2.c:22:27: warning: implicit declaration of function 'http_method_buf' is invalid in C99 [-Wimplicit-function-declaration]
    const buffer * s__b = http_method_buf(e_2_i);
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
3 warnings and 2 errors generated.
